--- a/RestoAPP/RestoAPP/MasterResto.Master
+++ b/RestoAPP/RestoAPP/MasterResto.Master
@@ -22,14 +22,14 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Resto</a>
+                    <a class="navbar-brand" href="/Default.aspx">Resto</a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Limpiar mesa</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Ver Menu</a>
+                                <a class="nav-link" href="/PantallaMenu.aspx">Ver Menu</a>
                             </li>
 
                         </ul>
