--- a/RestoAPP/RestoAPP/MasterResto.Master
+++ b/RestoAPP/RestoAPP/MasterResto.Master
@@ -25,17 +25,38 @@
                     <a class="navbar-brand" href="/Default.aspx">Resto</a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Limpiar mesa</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/PantallaMenu.aspx">Ver Menu</a>
-                            </li>
 
+                            <li class="nav-item">
+                                <a class="nav-link" href="/PantallaMenu.aspx">Ver Menus</a>
+                            </li>
+                            <%if (Session["Usuario"]!=null&&((Dominio.Login)Session["Usuario"]).NivelAcceso>=1) {%>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Limpiar mesas</a>
+                            </li>
+                            <% }%>
+
+                            <%if (Session["Usuario"] != null && ((Dominio.Login)Session["Usuario"]).NivelAcceso == 3)
+                                {%>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/PantallaMenu.aspx">Ver mis Mesas</a>
+                            </li>
+                            <%} %>
+
+                            <%if (Session["Usuario"]!=null&&((Dominio.Login)Session["Usuario"]).NivelAcceso==2) {%>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/PantallaMenu.aspx">Modificar Menus</a>
+                            </li>
+                            <% }%>
+
+                            <%if (Session["Usuario"]!=null&&((Dominio.Login)Session["Usuario"]).NivelAcceso==1) {%>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/PantallaMenu.aspx">Ver Empleados</a>
+                            </li>
+                            <% }%>
                         </ul>
                         <form class="d-flex" role="search">
                             <%--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">--%>
-                            <button class="btn btn-outline-success" type="submit">Logearse</button>
+                            <a class="btn btn-outline-success" href="AccesoEmpleados.aspx" type="submit">Logearse </a>
                         </form>
                     </div>
                 </div>
