--- a/RestoAPP/RestoAPP/MasterResto.Master
+++ b/RestoAPP/RestoAPP/MasterResto.Master
@@ -31,7 +31,7 @@
                             </li>
                             
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Limpiar mesas</a>
+                                <a class="nav-link" aria-current="page" href="#">Limpiar mesas</a>
                             </li>
 
                             
