--- a/RestoAPP/RestoAPP/MasterResto.Master
+++ b/RestoAPP/RestoAPP/MasterResto.Master
@@ -7,7 +7,7 @@
     <title>MesaResto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link href="StyleSheet1.css" rel="stylesheet" />
 
     <%--link de referencia css--%>
 
@@ -22,33 +22,31 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="/Default.aspx">Resto</a>
+                    <a class="navbar-brand" href="/PantallaMenu.aspx">Resto</a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                             <li class="nav-item">
                                 <a class="nav-link" href="/PantallaMenu.aspx">Ver Menus</a>
                             </li>
-                            
+                            <%if (Session["Usuario"] != null && (((Dominio.Login)Session["Usuario"]).NivelAcceso == 3||((Dominio.Login)Session["Usuario"]).NivelAcceso==1))
+                                {%>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Limpiar mesas</a>
+                                <a class="nav-link active" aria-current="page" href="#">Limpiar mesas</a>
                             </li>
-
-                            
+                            <%} %>
+                            <%if (Session["Usuario"] != null &&  (((Dominio.Login)Session["Usuario"]).NivelAcceso == 3||((Dominio.Login)Session["Usuario"]).NivelAcceso==1))
+                                {%>
                             <li class="nav-item">
                                 <a class="nav-link" href="/MesasUser.aspx">Ver mis Mesas</a>
                             </li>
-                            
-
-                           
-                            <li class="nav-item">
-                                <a class="nav-link" href="/PantallaMenu.aspx">Modificar Menus</a>
-                            </li>
-
-                            
+                            <%} %>
+                            <%if (Session["Usuario"] != null && ((Dominio.Login)Session["Usuario"]).NivelAcceso == 1)
+                                {%>
                             <li class="nav-item">
                                 <a class="nav-link" href="/PantallaEmpleados.aspx">Ver Empleados</a>
                             </li>
+                            <%} %>
                         </ul>
                         <form class="d-flex" role="search">
                             <%--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">--%>
