--- a/RestoAPP/RestoAPP/MasterResto.Master
+++ b/RestoAPP/RestoAPP/MasterResto.Master
@@ -46,6 +46,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/PantallaEmpleados.aspx">Ver Empleados</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/PantRecaudacion.aspx">Ver Ingresos</a>
+                            </li>
                             <%} %>
                         </ul>
                         <form class="d-flex" role="search">
