--- a/RestoAPP/RestoAPP/CSS/StyleSheet1.css
+++ b/RestoAPP/RestoAPP/CSS/StyleSheet1.css
@@ -1,2 +1,25 @@
-﻿body {
+﻿html {
+    min-height: 100%;
+    position: relative;
 }
+body {
+    margin: 0;
+    background-color: #9CB4A2;
+    color: #ffffff;
+    margin-bottom: 40px;
+}
+div.card.text-center.mb-3 {
+    background-color: #61A772;
+    text-align: center;
+}
+
+footer {
+    background-color: #212529;
+    color: #ffffff;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
+
