--- a/RestoAPP/RestoAPP/MasterResto.Master
+++ b/RestoAPP/RestoAPP/MasterResto.Master
@@ -7,7 +7,7 @@
     <title>MesaResto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="StyleSheet1.css" rel="stylesheet" />
+    <link href="CSS\StyleSheet1.css" rel="stylesheet" />
 
     <%--link de referencia css--%>
 
