--- a/RestoAPP/RestoAPP/CSS/StyleSheet1.css
+++ b/RestoAPP/RestoAPP/CSS/StyleSheet1.css
@@ -34,3 +34,100 @@ input#ContentPlaceHolder1_btnIngresar {
     color: #fff;
     border-radius: 8px;
 }
+
+input#ContentPlaceHolder1_repEmpleados_btnCerrar_0 {
+    background-color: #24282b;
+    width: 285px;
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repEmpleados_BtnCambiar_0 {
+    background-color: #24282b;
+    width: 285px;
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnMesa_0 {
+    background-color: #24282b;
+    width: 300px;
+    height:40px;
+    text-align: center;
+    display: inherit;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnMesa_1 {
+    background-color: #24282b;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    display: inherit;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnMesa_2 {
+    background-color: #24282b;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    display: inherit;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnMesa_3 {
+    background-color: #24282b;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    display: inherit;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnMesa_4 {
+    background-color: #24282b;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    display: inherit;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnMesa_5 {
+    background-color: #24282b;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    display: inherit;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnMesa_6 {
+    background-color: #24282b;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    display: inherit;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 8px;
+}
