--- a/RestoAPP/RestoAPP/CSS/StyleSheet1.css
+++ b/RestoAPP/RestoAPP/CSS/StyleSheet1.css
@@ -131,3 +131,111 @@ input#ContentPlaceHolder1_repRepetidor_btnMesa_6 {
     color: #fff;
     border-radius: 8px;
 }
+
+input#ContentPlaceHolder1_repRepetidor_btnPagar_0 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_BtnCancelarPedido_0 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnPagar_1 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_BtnCancelarPedido_1 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnPagar_2 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_BtnCancelarPedido_2 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnPagar_3 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_BtnCancelarPedido_3 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnPagar_4 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_BtnCancelarPedido_4 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_btnPagar_5 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+input#ContentPlaceHolder1_repRepetidor_BtnCancelarPedido_5 {
+    background-color: #2A733B;
+    width: 100px;
+    text-align: center;
+    color: #FFF;
+    text-decoration: none;
+    border-radius: 8px;
+}
