falta una cosa mas y creo q estamos

--- a/RestoAPP/RestoAPP/MasterResto.Master
+++ b/RestoAPP/RestoAPP/MasterResto.Master
@@ -29,6 +29,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/PantallaMenu.aspx">Ver Menus</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/PantReserva.aspx">Hacer una Reserva</a>
+                            </li>
                             <%if (Session["Usuario"] != null && (((Dominio.Login)Session["Usuario"]).NivelAcceso == 3||((Dominio.Login)Session["Usuario"]).NivelAcceso==1))
                                 {%>
                             <li class="nav-item">
